k8s.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    istio-injection : enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    istio-injection : enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    istio-injection : enabled
---
kind: Service
apiVersion: v1
metadata:
  name: svc-client
  namespace: dev
spec:
  selector:
    app: client
  type: ClusterIP
  ports:
  - name: grpc
    port: 80
    targetPort: 8000
---
kind: Service
apiVersion: v1
metadata:
  name: svc-server
  namespace: dev
spec:
  selector:
    app: server
  type: ClusterIP
  ports:
  - name: grpc
    port: 80
    targetPort: 8001
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: app-client
  namespace: dev
  labels:
    app: client
spec:
  selector:
    matchLabels:
      app: client
  replicas: 2
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
      - name: client
        image: jacenr/client:$VERSION
        imagePullPolicy: IfNotPresent
        ports:
        - name: grpc-port
          containerPort: 8000
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: app-server
  namespace: dev
  labels:
    app: server
spec:
  selector:
    matchLabels:
      app: server
  replicas: 2
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: jacenr/server:$VERSION
        imagePullPolicy: IfNotPresent
        ports:
        - name: grpc-port
          containerPort: 8001
